Squashed commit of the following:
commit d913fa16a08227b0ac21d8dbc0470a4a534a81f6
Merge: 1a3c2a7 e1bf075
Author: SheeeChaos <146656845+SheeeChaos@users.noreply.github.com>
Date:   Mon Dec 11 09:00:48 2023 +0800

    Merge pull request #12 from SheeeChaos/Group-1-update

    update

commit e1bf0750f9395073cbb4566e5721e25edb083b13
Author: SheeeChaos <146656845+SheeeChaos@users.noreply.github.com>
Date:   Mon Dec 11 08:59:30 2023 +0800

    update

commit 1a3c2a7fdccd469812d8e6ded93ef228d3753b63
Merge: 3371538 a8cafe9
Author: SheeeChaos <146656845+SheeeChaos@users.noreply.github.com>
Date:   Thu Dec 7 23:13:23 2023 +0800

    Merge pull request #10 from SheeeChaos/Group-1-update

    11

commit a8cafe9a49f61f42c3c3c4d56736f582bb1d1472
Merge: f383916 3371538
Author: SheeeChaos <146656845+SheeeChaos@users.noreply.github.com>
Date:   Thu Dec 7 23:13:07 2023 +0800

    Merge branch 'master' into Group-1-update

commit f3839162140a8bbe6dbf29bd752b30cf616910a9
Author: SheeeChaos <146656845+SheeeChaos@users.noreply.github.com>
Date:   Thu Dec 7 23:09:05 2023 +0800

    11

commit 3371538d38095e0e0192348c7cbb57193f378ad7
Merge: abecb1e 45e1ef8
Author: SheeeChaos <146656845+SheeeChaos@users.noreply.github.com>
Date:   Thu Dec 7 23:02:16 2023 +0800

    Merge pull request #9 from MCAces/master

    UI update

commit 45e1ef82fade027d2f7087e46721648e2c0f273d
Author: MCAces <148616331+MCAces@users.noreply.github.com>
Date:   Thu Dec 7 22:21:16 2023 +0800

    UI update

commit abecb1e18933ef49b3809931065331a6b0fb51b4
Merge: eab0213 b833fb2
Author: SheeeChaos <146656845+SheeeChaos@users.noreply.github.com>
Date:   Thu Dec 7 02:39:51 2023 +0800

    Merge pull request #8 from MCAces/master

    Group 4 - update

commit eab0213c26599778792bad8c0eb1fa63405cb8ad
Author: SheeeChaos <146656845+SheeeChaos@users.noreply.github.com>
Date:   Thu Dec 7 02:36:51 2023 +0800

    Added

commit b833fb25e3e40e4f2fa61ec62d8296966d27f84a
Author: MCAces <148616331+MCAces@users.noreply.github.com>
Date

--- a/Views/AdminMonitoring/ProductRevenue.cshtml
+++ b/Views/AdminMonitoring/ProductRevenue.cshtml
@@ -1,8 +1,26 @@
-﻿
+﻿@model List<SBIT3J_SuperSystem_Final.Models.ProductRevenueModel>
 @{
     ViewBag.Title = "ProductRevenue";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
 <h2>ProductRevenue</h2>
 
+<table>
+    <tr>
+        <th>Product Code</th>
+        <th>Product Name</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Total Amoun</th>
+    </tr>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.Product_Code</td>
+            <td>@item.Product_Name</td>
+            <td>@item.Price</td>
+            <td>@item.Total_Quantity</td>
+            <td>@item.Total_Amount</td>
+        </tr>
+    }
+</table>
