--- a/Views/AdminMonitoring/SalesTransactionListPrintPdf.cshtml
+++ b/Views/AdminMonitoring/SalesTransactionListPrintPdf.cshtml
@@ -34,10 +34,12 @@
 <body>
     <h1>Sales Transaction</h1>
 
-        <p>Total Sales:  <span>@ViewBag.totalSales</span></p>
-        <p>Average Daily Sales:  <span>@ViewBag.AverageDailySales</span></p>
-        <p>Total Order:  <span>@ViewBag.TotalCount</span></p>
- 
+    <p>Total Sales:  <span>@ViewBag.totalSales</span></p>
+    <p>Average Daily Sales:  <span>@ViewBag.AverageDailySales</span></p>
+    <p>Total Order:  <span>@ViewBag.TotalCount</span></p>
+    <p>Date Printed:  <span> @DateTime.Now</span></p>
+   
+
     <div class="table-container">
         <table class="table">
             <tr>
