for Leave_Request

--- a/Views/EmployeeManagement/Hr_RequestLeave.cshtml
+++ b/Views/EmployeeManagement/Hr_RequestLeave.cshtml
@@ -242,7 +242,7 @@
                 table.crud-table {
                     width: 100%;
                     border-collapse: collapse;
-                    margin-bottom: 20px;
+                    margin-bottom: -2px;
                 }
 
             th.crud-header-cell, td.crud-data-cell {
@@ -291,12 +291,12 @@
                 position: fixed;
                 display: inline-block;
                 padding: 7px 10px;
-                top: 195px;
-                right: 24px;
+                top: 247px;
+                right: 30px;
                 margin: 5px;
-                font-size: 38px;
-                color: white;
-                background-color: skyblue;
+                font-size: 30px;
+                color: dodgerblue;
+                background-color: white;
                 border: none;
                 border-radius: 4px;
                 cursor: pointer;
@@ -392,7 +392,10 @@
             <div class="wthin_container">
 
                 <table class="crud-table" style="width:100%;">
-
+                    <tr>
+                        <br>
+                        <br>
+                    </tr>
                     <tr>
                         <th class="crud-header-cell" style="width:5%;">
                             ID
@@ -413,7 +416,9 @@
                             End Date
                         </th>
 
-                        <a href="@Url.Action("Hr_Leave_C", "EmployeeManagement")" class="cleave"><h4 style="color:peru;">Create</h4></a>
+                        <div class="cleave">
+                            @Html.ActionLink("Create", "HR_Leave")
+                        </div>
 
 
                     </tr>
