--- a/Views/EmployeeManagement/Hr_Employee_L.cshtml
+++ b/Views/EmployeeManagement/Hr_Employee_L.cshtml
@@ -231,7 +231,7 @@
                 table.crud-table {
                     width: 100%;
                     border-collapse: collapse;
-                    margin-bottom: 20px;
+                    margin-bottom: -2px;
                 }
 
                 th.crud-header-cell, td.crud-data-cell {
@@ -261,7 +261,23 @@
             display: inline-block;
             padding: 4px 9px;
             margin: 5px;
-            font-size: 18px;
+            
+            font-size: 14px;
+            color: white;
+            background-color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+        .custom-btn2 {
+            position:absolute;
+            display: inline-block;
+            padding: 4px 9px;
+            margin: 5px;
+            right:40px;
+            font-size: 14px;
             color: white;
             background-color: white;
             border: none;
@@ -275,6 +291,10 @@
                 background-color: dodgerblue;
                 color: white;
             }
+        .custom-btn2:hover {
+            background-color: dodgerblue;
+            color: white;
+        }
 
 
     </style>
@@ -355,7 +375,13 @@
         <div class="ContainerHeader"><h1 style="font-family: 'Times New Roman'; font-size:38px;">EMPLOYEE LIST</h1></div>
 
         <table class="crud-table" style="width:100%;">
-
+            <tr>
+                <a href="@Url.Action("Create", "EmployeeManagement")" class="custom-btn2"><h1 style="color: royalblue;">Create</h1></a>
+                <br>
+                <br>
+                <br>
+                
+            </tr>
             <tr>
                 <th class="crud-header-cell" style="width:5%;">
                     ID
@@ -379,8 +405,8 @@
                     Details
                 </th>
                 <th class="crud-header-cell" style="width:20%;">
-
-                    <a href="@Url.Action("Create", "EmployeeManagement")" class="custom-btn"><h1 style="color: royalblue;">Create</h1></a>
+                    Actions
+                    
                 </th>
             </tr>
         </table>
