--- a/Views/EmployeeManagement/TimeInn.cshtml
+++ b/Views/EmployeeManagement/TimeInn.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SBIT3J_SuperSystem_Final.Models.EmployeeAccount
 @{
-    ViewBag.Title = "TimeIn";
+    ViewBag.Title = "TimeInn";
     Layout = null;
 }
 
