--- a/Views/EmployeeManagement/Delete.cshtml
+++ b/Views/EmployeeManagement/Delete.cshtml
@@ -194,7 +194,7 @@
         }
 
         .ContainerHeader {
-            background-color: white;
+            
             width: 100%;
             height: 38px;
             top: 30px;
@@ -263,7 +263,8 @@
             padding: 7px 13px;
             margin: 5px;
             font-size: 42px;
-            color: blue;
+            color: white;
+            background-color:maroon;
             border: none;
             border-radius: 4px;
             cursor: pointer;
@@ -273,8 +274,30 @@
 
             .custom-btn:hover {
                 color: white;
-                background-color: dodgerblue;
+                background-color: red;
             }
+
+        .custom-btn2 {
+            position: absolute;
+            display: inline-block;
+            
+            right: 20px;
+            top: 15px;
+            padding: 7px 13px;
+            margin: 5px;
+            font-size: 32px;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+            .custom-btn2:hover {
+                
+            }
+
     </style>
     <meta name="viewport" content="width=device-width" />
     <title>Details</title>
@@ -344,101 +367,102 @@
     </nav>
 
     <div class="container">
+        <a href="@Url.Action("Hr_Employee_L", "EmployeeManagement")" class="custom-btn2"><h4 style="color:maroon;">←</h4></a>
         <div class="Text-header">
             <div class="ContainerHeader">
-                <h2 style="font-family:'Times New Roman'; font-size:38px; text-align:center;">| EMPLOYEE INFORMATION |</h2>
-                </div>
-                <br>
-                <h3>Are you sure you want to delete this?</h3>
-                <br>
-                <div>
+                <h2 style="font-family:'Times New Roman'; font-size:38px; text-align:left;"> EMPLOYEE INFORMATION </h2>
+            </div>
+            <br>
+            <h3>Are you sure you want to delete this?</h3>
+            <br>
+            <div>
 
-                    <hr />
-                    <table class="crud-table" style="width:100%;">
-                        <tr>
-                            <th class="crud-header-cell" style="width:5%;">
-                                First Name
-                            </th>
+                <hr />
+                <table class="crud-table" style="width:100%;">
+                    <tr>
+                        <th class="crud-header-cell" style="width:5%;">
+                            First Name
+                        </th>
 
-                            <td class="crud-data-cell" style="width:95%;">
-                                @Html.DisplayFor(model => model.First_Name)
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="crud-header-cell" style="width:5%;">
-                                Middle Name
-                            </th>
-                            <td class="crud-data-cell" style="width:95%;">
-                                @Html.DisplayFor(model => model.Middle_Name)
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="crud-header-cell" style="width:5%;">
-                                Last Name
-                            </th>
-                            <td class="crud-data-cell" style="width:95%;">
-                                @Html.DisplayFor(model => model.Last_Name)
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="crud-header-cell" style="width:5%;">
-                                Sex
-                            </th>
-                            <td class="crud-data-cell" style="width:5%;">
-                                @Html.DisplayFor(model => model.Sex)
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="crud-header-cell" style="width:17%;">
-                                Address
-                            </th>
-                            <td class="crud-data-cell" style="width:17%;">
-                                @Html.DisplayFor(model => model.Address)
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="crud-header-cell" style="width:15%;">
-                                Phone Number
-                            </th>
-                            <td class="crud-data-cell" style="width:15%;">
-                                @Html.DisplayFor(model => model.Phone_Number)
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="crud-header-cell" style="width:15%;">
-                                Email
-                            </th>
-                            <td class="crud-data-cell" style="width:15%;">
-                                @Html.DisplayFor(model => model.Email)
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="crud-header-cell" style="width:5%;">
-                                Birth Date
-                            </th>
-                            <td class="crud-data-cell" style="width:5%;">
-                                @Html.DisplayFor(model => model.Birth_Date)
-                            </td>
-                        </tr>
-                        <tr>
-                            <th class="crud-header-cell" style="width:5%;">
-                                Date Hired
-                            </th>
-                            <td class="crud-data-cell" style="width:5%;">
-                                @Html.DisplayFor(model => model.Date_Hired)
-                            </td>
-                        </tr>
-                    </table>
+                        <td class="crud-data-cell" style="width:95%;">
+                            @Html.DisplayFor(model => model.First_Name)
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="crud-header-cell" style="width:5%;">
+                            Middle Name
+                        </th>
+                        <td class="crud-data-cell" style="width:95%;">
+                            @Html.DisplayFor(model => model.Middle_Name)
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="crud-header-cell" style="width:5%;">
+                            Last Name
+                        </th>
+                        <td class="crud-data-cell" style="width:95%;">
+                            @Html.DisplayFor(model => model.Last_Name)
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="crud-header-cell" style="width:5%;">
+                            Sex
+                        </th>
+                        <td class="crud-data-cell" style="width:5%;">
+                            @Html.DisplayFor(model => model.Sex)
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="crud-header-cell" style="width:17%;">
+                            Address
+                        </th>
+                        <td class="crud-data-cell" style="width:17%;">
+                            @Html.DisplayFor(model => model.Address)
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="crud-header-cell" style="width:15%;">
+                            Phone Number
+                        </th>
+                        <td class="crud-data-cell" style="width:15%;">
+                            @Html.DisplayFor(model => model.Phone_Number)
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="crud-header-cell" style="width:15%;">
+                            Email
+                        </th>
+                        <td class="crud-data-cell" style="width:15%;">
+                            @Html.DisplayFor(model => model.Email)
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="crud-header-cell" style="width:5%;">
+                            Birth Date
+                        </th>
+                        <td class="crud-data-cell" style="width:5%;">
+                            @Html.DisplayFor(model => model.Birth_Date)
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="crud-header-cell" style="width:5%;">
+                            Date Hired
+                        </th>
+                        <td class="crud-data-cell" style="width:5%;">
+                            @Html.DisplayFor(model => model.Date_Hired)
+                        </td>
+                    </tr>
+                </table>
 
-                    @using (Html.BeginForm())
-                    {
-                        @Html.AntiForgeryToken()
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-                        <div class="form-actions no-color">
-                            <input type="submit" value="Delete" class="custom-btn btn-default" /> |
-                            <div class="custom-btn">@Html.ActionLink("Back to List", "Hr_Employee_L")</div>
-                        </div>
-                    }
-                </div>
+                    <div class="form-actions no-color">
+                        <input type="submit" value="Delete" class="custom-btn btn-default" />
+
+                    </div>
+                }
+            </div>
 </body>
 </html>
