--- a/Views/EmployeeManagement/Details.cshtml
+++ b/Views/EmployeeManagement/Details.cshtml
@@ -194,7 +194,7 @@
                 }
 
                 .ContainerHeader {
-                    background-color: white;
+                    
                     width: 100%;
                     height: 52px;
                     top: 30px;
@@ -270,7 +270,25 @@
                     text-decoration: none;
                     transition: background-color 0.3s;
                 }
-
+                .custom-btn2 {
+                    position:absolute;
+                    display: inline-block;
+                    
+                    right:20px;
+                    top:15px;
+                    padding: 7px 13px;
+                    margin: 5px;
+                    font-size: 32px;
+                    color: white;
+                    border: none;
+                    border-radius: 4px;
+                    cursor: pointer;
+                    text-decoration: none;
+                    transition: background-color 0.3s;
+                }
+                .custom-btn2:hover {
+                   
+                }
                     .custom-btn:hover {
                         color: white;
                         background-color: dodgerblue;
@@ -344,15 +362,16 @@
     </nav>
 
     <div class="container">
-        <div class="Text-header">
+        <a class="Text-header">
 
 
 
             <div class="ContainerHeader">
-                <h1 style="font-size:38px; font-family: 'Times New Roman'; text-align:center;">
-                   | EMPLOYEE INFORMATION DETAILS |
+                <a href="@Url.Action("Hr_Employee_L", "EmployeeManagement")" class="custom-btn2"><h4 style="color:maroon;">←</h4></a>
+                <h1 style="font-size:32px; font-family: 'Times New Roman'; text-align:left;">
+                     EMPLOYEE INFORMATION DETAILS 
                 </h1>
-                </div>
+            </div>
 
 
 
@@ -434,9 +453,9 @@
 
 
 
-                <p>
-                    <div class="custom-btn">@Html.ActionLink("Back to List", "Hr_Employee_L")</div>
-                </p>
+                
+                    
+                
 
 
             </div>
