--- a/Views/EmployeeManagement/Hr_Employee_L.cshtml
+++ b/Views/EmployeeManagement/Hr_Employee_L.cshtml
@@ -193,7 +193,7 @@
                 }
 
                 .ContainerHeader {
-                    background-color: white;
+                    
                     width: 100%;
                     height: 38px;
                     top: 30px;
@@ -279,7 +279,7 @@
             right:40px;
             font-size: 14px;
             color: white;
-            background-color: white;
+            background-color: maroon;
             border: none;
             border-radius: 4px;
             cursor: pointer;
@@ -292,7 +292,7 @@
                 color: white;
             }
         .custom-btn2:hover {
-            background-color: dodgerblue;
+            background-color: red;
             color: white;
         }
 
@@ -361,12 +361,13 @@
         </a>
 
         <!-- Payroll - DIRECTLY TO ANOTHER SYSTEM -->
-        <!--<a href="Url.Action("Payroll","Payroll")">-->
+        <a href="@Url.Action("HR_CreateAccount","EmployeeManagement")">
         <img src="~/Image/Group4/ICONS/Payroll.png" class="navitem" />
         </a>
         <hr>
 
     </nav>
+    
     <!-- ^^^ NAVBAR SECTION ^^^ -->
     <!-- CONTAINER -->
 
@@ -376,11 +377,12 @@
 
         <table class="crud-table" style="width:100%;">
             <tr>
-                <a href="@Url.Action("Create", "EmployeeManagement")" class="custom-btn2"><h1 style="color: royalblue;">Create</h1></a>
-                <br>
-                <br>
-                <br>
+                <a href="@Url.Action("Create", "EmployeeManagement")" class="custom-btn2"><h1 style="color: white;">ADD EMPLOYEE</h1></a>
                 
+                <br>
+                <br>
+                <br>
+
             </tr>
             <tr>
                 <th class="crud-header-cell" style="width:5%;">
@@ -406,7 +408,7 @@
                 </th>
                 <th class="crud-header-cell" style="width:20%;">
                     Actions
-                    
+
                 </th>
             </tr>
         </table>
