--- a/Views/EmployeeManagement/Hr_RequestLeave.cshtml
+++ b/Views/EmployeeManagement/Hr_RequestLeave.cshtml
@@ -204,7 +204,7 @@
                 }
 
                 .ContainerHeader {
-                    background-color: white;
+                    
                     width: 100%;
                     height: 38px;
                     top: 30px;
@@ -308,6 +308,27 @@
                 background-color:dodgerblue;
             }
 
+            .custom-btn2 {
+                position: absolute;
+                display: inline-block;
+                background-color: maroon;
+                right: 20px;
+                top: 50px;
+                padding: 7px 13px;
+                margin: 5px;
+                font-size: 32px;
+                color: white;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+                text-decoration: none;
+                transition: background-color 0.3s;
+            }
+
+                .custom-btn2:hover {
+                    background-color: red;
+                }
+
         </style>
         <meta name="viewport" content="width=device-width" />
         <title>LEAVE REQUEST</title>
@@ -387,7 +408,7 @@
         <div class="container">
 
 
-            <div class="ContainerHeader"><h1 style="font-family: 'Times New Roman'; font-size:38px;">Leave Request</h1></div>
+            <div class="ContainerHeader"><h1 style="font-family: 'Times New Roman'; font-size:38px;">LEAVE REQUEST</h1></div>
             <br>
             <div class="wthin_container">
 
@@ -416,9 +437,9 @@
                             End Date
                         </th>
 
-                        <div class="cleave">
-                            @Html.ActionLink("Create", "HR_Leave")
-                        </div>
+                        
+                            <a href="@Url.Action("HR_Leave", "EmployeeManagement")" class="custom-btn2"><h4 style="color:white;">Create Leave Request</h4></a>
+                        
 
 
                     </tr>
