--- a/Views/AdminMonitoring/ProductRevenue.cshtml
+++ b/Views/AdminMonitoring/ProductRevenue.cshtml
@@ -36,7 +36,7 @@
         </div>
         <button type="submit" name="filterType" value="search" style="display:none;">Apply Search Filter</button>
         <!-- Add this link for PDF generation -->
-        <a href="@Url.Action("GenerateProductRevenueList", new { searchFilter = Request.QueryString["searchFilter"] })" class="btn btn-primary">
+        <a href="@Url.Action("GenerateProductRevenueList", new { searchFilter = Request.QueryString["searchFilter"] })" class="btn btn-primary" target="_blank">
             <div class="print-pdf-btn">
                 <p>Print</p>
             </div>
