--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -37,7 +37,7 @@
                 </a>
             </li>
             <li>
-                <a href="@Url.Action("Losses", "AdminMonitoring")" class="menu-container">
+                <a href="@Url.Action("ChangePassword", "AdminMonitoring")" class="menu-container">
                     <img src="~/Image/Group1-Assets/LossesIcon.png" />
                     <span class="nav-item">Losses</span>
                 </a>
